# beanRecomp

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BeanRecomp.sln  BeanRecomp.vcxproj  BeanRecomp.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  vcpkg.json
src/: CMakeLists.txt  main.cpp  pch.cpp  pch.h
src/api/: CMakeLists.txt  api.cpp  api.h
src/app/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/apu/: CMakeLists.txt  apu.cpp  apu.h
src/assets/: asset_manager.cpp  asset_manager.h
src/audio/: CMakeLists.txt  README.md  audio.cpp  audio.h  audio_manager.cpp  audio_manager.h  audio_manager_test.cpp  audio_test.cpp  extract_audio.cpp  rba_parser.cpp  rba_parser.h  xact_parser.cpp  xact_parser.h
src/config/: bean.xex.switches.toml
src/cpu/: CMakeLists.txt  cpu.cpp  cpu.h
src/docs/: example_implementation.md  rebuild_instructions.md
src/docs/formats/: shader_code.txt  texture_formats.txt
src/examples/: array_fix_examples.cpp  array_fix_patterns.cpp
src/framework/: framework.h
src/gpu/: CMakeLists.txt  gpu.cpp  gpu.h
src/hid/: CMakeLists.txt  hid.cpp  hid.h
src/include/ppc/: pch.h  ppc_compat.h  ppc_config.h  ppc_context.h  ppc_defs.h  ppc_extern.h  ppc_forward_decls.h  ppc_func_mapping.h  ppc_function_wrapper.h  ppc_macros.h  ppc_memory.h  ppc_memory_access.h  ppc_memory_macros.h  ppc_platform.h  ppc_recomp.h  ppc_recomp_compat.h  ppc_recomp_defs.h  ppc_recomp_fix.h  ppc_recomp_full.h  ppc_recomp_funcs.h  ppc_recomp_macros.h  ppc_recomp_msvc.h  ppc_recomp_patch.h  ppc_recomp_shared.h  ppc_recomp_test.h  ppc_recomp_wrappers.h  ppc_register.h  ppc_register_ext.h  ppc_register_ops.h  ppc_tables.h  ppc_types.h
src/kernel/: CMakeLists.txt  kernel.cpp  kernel.h
src/os/: CMakeLists.txt  config.cpp  config.h  crash_handler.cpp  crash_handler.h  logger.cpp  logger.h  os.cpp  os.h
src/ppc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PPC_Recompilation.sln  cmake_install.cmake  decompressor.cpp  decompressor.h  disassembler.cpp  disassembler.h  fix_includes.py  fix_memory_access.py  instruction_translator.cpp  instruction_translator.h  ppc.cpp  ppc.h  ppc_base.cpp  ppc_context.cpp  ppc_func_mapping.cpp  ppc_function_wrapper.h  ppc_memory.cpp  ppc_recomp.0.cpp  ppc_recomp.0.cpp.bak  ppc_recomp.1.cpp  ppc_recomp.1.cpp.bak  ppc_recomp.10.cpp  ppc_recomp.10.cpp.bak  ppc_recomp.11.cpp  ppc_recomp.11.cpp.bak  ppc_recomp.12.cpp  ppc_recomp.12.cpp.bak  ppc_recomp.13.cpp  ppc_recomp.13.cpp.bak  ppc_recomp.14.cpp  ppc_recomp.14.cpp.bak  ppc_recomp.15.cpp  ppc_recomp.15.cpp.bak  ppc_recomp.16.cpp  ppc_recomp.16.cpp.bak  (+90 more)
src/ppc/ppc_recomp.dir/Debug/ppc_recomp.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ppc_recomp.lastbuildstate
src/recompiler/: recompiler.cpp  recompiler.h  x86_code.cpp  x86_code.h
src/scripts/: build.bat
src/tests/audio/: audio_test.cpp  audio_usage_example.cpp  test_audio.cpp
src/tests/ppc/: CMakeLists.txt  ppc_context_test.cpp  ppc_memory_test.cpp  ppc_register_test.cpp
src/tools/: list_xact_cues.ps1
src/ui/: CMakeLists.txt  ui.cpp  ui.h
tests/: update_cr_fields.ps1
